--- a/style/components.css
+++ b/style/components.css
@@ -4,25 +4,20 @@
     color: var(--done);
 }
 
-.inforMessage {
-    grid-column: span 2;
-    display: block;
-    text-align: center;
-    color: var(--text-main);
-    font-size: 20px;
-    font-weight: bold;
-}
-
 /* dinamic components */
 .delete,
 .doneB,
 .edit {
     font-weight: bold;
+    border: none;
+    border-radius: 10px;
+    padding: 8px;
+    margin: 3px;
 }
 
-.delete,
-.doneB,
-.edit:disabled{
+.delete:disabled,
+.doneB:disabled,
+.edit:disabled {
     background-color: var(--disabled-bg);
     color: var(--disabled-text);
 }
@@ -36,7 +31,7 @@
     background-color: var(--delete);
 }
 
-.delete:hover {
+.delete:hover:not(:disabled) {
     background-color: var(--delete-hover);
 }
 
@@ -44,7 +39,7 @@
     background-color: var(--done);
 }
 
-.doneB:hover {
+.doneB:hover:not(:disabled) {
     background-color: var(--done-hover);
 }
 
@@ -54,15 +49,19 @@
     font-weight: bold;
 }
 
-.edit-hover {
+.edit:hover:not(:disabled) {
     background-color: var(--edit-hover);
 }
 
+td{
+    padding: 10px;
+}
 /* static components */
 table {
-    width: 100%;
+    table-layout: fixed;
+    width: 60%;
     font-size: 20px;
-    margin-top: 80px;
+    margin: 20px auto 0;
 }
 
 .createSection label {
@@ -115,6 +114,10 @@ select {
     font-size: 16px;
 }
 
+footer{
+    text-indent: 30px;
+}
+
 input {
     margin-bottom: 10px;
     border: 1px solid;
@@ -135,4 +138,32 @@ input {
 .inputSpace {
     background-color: var(--bg-sections);
     border: 1px solid var(--border)
+}
+
+.cell1{
+    max-width: 50px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.inforMessage {
+    grid-column: span 2;
+    display: block;
+    text-align: center;
+    color: var(--text-main);
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.alert_message{
+    white-space: nowrap;
+    margin: 80px auto;
+    text-align: center;
+    font-size: 40px;
+}
+
+.dinamicInput{
+    padding: 10px;
+    font-size: 16px;
 }
