--- a/style/layout.css
+++ b/style/layout.css
@@ -21,8 +21,8 @@ main {
 
 .renderSpace {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     overflow-y: auto;
 }
 
